Moving around the EDA code some. Deleted the jupyter notebook outputs for data security. Doing manual EDA now.

--- a/2_detroit_computer_vision/eda/proj2_eda_vibecoded.ipynb
+++ b/2_detroit_computer_vision/eda/proj2_eda_vibecoded.ipynb
@@ -1090,6 +1090,48 @@
     "\n",
     "print(\"\\n📊 Dataset Ready for Machine Learning! 🤖\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FINAL_DETERMINATION\n",
+       "Property in Pipeline                   14547\n",
+       "Other Resolution Pathways (Salvage)    11234\n",
+       "Vacant (Not Blighted)                   4940\n",
+       "No Action (Salvage)                     4460\n",
+       " NAP (Salvage)                          4451\n",
+       "ODM (Demo)                               634\n",
+       "Noticeable Evidence of Blight             26\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blight_df['FINAL_DETERMINATION'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
