--- a/1_detroit_open_data_portal/Detroit_data_chatbot.ipynb
+++ b/1_detroit_open_data_portal/Detroit_data_chatbot.ipynb
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 130,
    "id": "c09398d4",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 129,
    "id": "c5fa0552",
    "metadata": {},
    "outputs": [
@@ -1275,11 +1275,11 @@
      "data": {
       "text/plain": [
        "[{'neighborhood': 'Jefferson Chalmers',\n",
-       "  'incident_count': 14,\n",
-       "  'crime_count': 23}]"
+       "  'number_of_911calls': 14,\n",
+       "  'incident_count': 23}]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1289,7 @@
     "    MATCH (n:Neighborhood {name: $neighborhood_name})\n",
     "    OPTIONAL MATCH (incident:Record911)-[:HAPPENED_AT]->(n)\n",
     "    OPTIONAL MATCH (crime:RecordRMS)-[:HAPPENED_AT]->(n)\n",
-    "    RETURN n.name AS neighborhood, count(DISTINCT incident) AS incident_count, count(DISTINCT crime) AS crime_count\n",
+    "    RETURN n.name AS neighborhood, count(DISTINCT incident) AS number_of_911calls, count(DISTINCT crime) AS incident_count\n",
     "\"\"\", params={\"neighborhood_name\": \"Jefferson Chalmers\"})"
    ]
   }
